--- a/app/index.html
+++ b/app/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Cool Project</title>
+    <title>C.Chico's Music Site.</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:900" rel="stylesheet">
   </head>
   <body>
     <div class="container">
-      <p>Welcome to your life.</p>
+      <h1>C.Chico's Music Site</h1>
+
     </div>
     <script src="js/bundle.js"></script>
   </body>
