pics and data added to page

--- a/app/index.html
+++ b/app/index.html
@@ -3,16 +3,29 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C.Chico's Music Site.</title>
+    <title>&#9836; C.Chico's Music Site &#9834;</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:900" rel="stylesheet">
   </head>
   <body>
     <div class="container">
+        <form class="" action="index.html" method="post">
+            <input type="text" name="name" value="" placeholder="search for songs">
+        </form>
+      <audio controls autoplay>
+          <p>If you are reading this, it is because your browser does not support the audio element.</p>
+      </audio>
       <h1>C.Chico's Music Site</h1>
+      <div class="musicInput">
 
+      </div>
     </div>
     <script src="js/bundle.js"></script>
   </body>
 </html>
+
+
+<audio src="">
+
+</audio>
