added title desc/ additional effects

--- a/app/index.html
+++ b/app/index.html
@@ -10,13 +10,14 @@
   </head>
   <body>
     <div class="container">
-        <form class="" action="index.html" method="post">
-            <input type="text" name="name" value="" placeholder="search for songs">
-        </form>
-      <audio controls autoplay>
-          <p>If you are reading this, it is because your browser does not support the audio element.</p>
-      </audio>
+
       <h1>C.Chico's Music Site</h1>
+
+      <form >
+          <input type="text" name="name" value="" placeholder="search for songs">
+      </form>
+      <audio controls autoplay><p>If you are reading this, it is because your browser does not support the audio element.</p> </audio>
+
       <div class="musicInput">
 
       </div>
